# sample_project

./: .gitignore  .readthedocs.yaml  404.html  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
checks/: check_imports.py
developer_guide/dev_guide/: index.html
developer_guide/documentation_guide/: index.html
developer_guide/steps_for_version_release/: index.html
docs/: README.md  STEPS_FOR_VERSION_RELEASE.md  index.md  requirements.txt
docs/developer_guide/: dev_guide.md  documentation_guide.md  steps_for_version_release.md  testing.md
docs/source/: conf.py
docs/user_guide/: how_to_use.md
reference/SUMMARY/: index.html
reference/lightning_addons/: index.html
reference/lightning_addons/callbacks/: index.html
reference/lightning_addons/callbacks/class_weights/: index.html
reference/lightning_addons/layers/: index.html
reference/lightning_addons/layers/simple_cnn/: index.html
reference/lightning_addons/losses/: index.html
reference/lightning_addons/losses/focal/: index.html
reference/lightning_addons/modules/: index.html
reference/lightning_addons/modules/simple_conv/: index.html
scripts/: check_imports.py  gen_ref_pages.py
search/: search_index.json
src/lightning_addons/: __init__.py
src/lightning_addons/callbacks/: __init__.py  class_weights.py
src/lightning_addons/layers/: __init__.py  simple_cnn.py
src/lightning_addons/losses/: __init__.py  focal.py
src/lightning_addons/modules/: __init__.py  simple_conv.py
tests/: fixtures.py
tests/unit/callbacks/: test_class_weights.py
user_guide/how_to_use/: index.html
