
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning_addons"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
authors = [
  {name="Victor Egorov", email="victoregorov23@gmail.com"},
]
description = "Addons for pytorch lightning"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
