
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightning_addons"
version = "0.0.2"
dependencies = [
    "twine>=4.0.2",
    "build>=1.0.3",
    "torch>=2.1.1",
    "torchvision>=0.16.1",
    "torchaudio>=2.1.1",
    "lightning>=2.1.2",
    "torchmetrics>=1.2.0",
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    "mlflow>=2.8.1",
]
authors = [
  {name="Victor Egorov", email="victoregorov23@gmail.com"},
]
description = "Addons for pytorch lightning"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Victthor/sample_project"
Issues = "https://github.com/Victthor/sample_project/issues"


# try these package managing tools:
# https://hatch.pypa.io/latest/version/
# https://flit.pypa.io/en/latest/
# https://pdm-project.org/latest/
# https://python-poetry.org/
